--- a/Checkpoint1/Makefile
+++ b/Checkpoint1/Makefile
@@ -9,9 +9,9 @@ JFLEX=jflex
 CLASSPATH=-cp /Users/farid/Documents/java-cup-bin-11b/java-cup-11b.jar
 CUP=$(JAVA) $(CLASSPATH) java_cup.Main
 
-all: Main.class
+all: CM.class
 
-Main.class: absyn/*.java parser.java sym.java Lexer.java ShowTreeVisitor.java Scanner.java Main.java
+CM.class: absyn/*.java parser.java sym.java Lexer.java ShowTreeVisitor.java Scanner.java CM.java
 
 %.class: %.java
 	$(JAVAC) $(CLASSPATH) $^
