--- a/Checkpoint2/Makefile
+++ b/Checkpoint2/Makefile
@@ -1,11 +1,12 @@
 JAVA=java
 JAVAC=javac
 
+# School Server Makefile Configurations
 JFLEX=jflex
 CLASSPATH=-cp /usr/share/java/cup.jar:.
 CUP=cup
 
-# Farid's Makefile configurations
+# Farid's Makefile configurations for MacOS
 # JFLEX=jflex
 # CLASSPATH=-cp /Users/farid/Documents/java-cup-bin-11b/java-cup-11b.jar:.
 # CUP=$(JAVA) $(CLASSPATH) java_cup.Main
