--- a/Checkpoint1/Makefile
+++ b/Checkpoint1/Makefile
@@ -1,13 +1,9 @@
 JAVA=java
 JAVAC=javac
 
-# JFLEX=jflex
-# CLASSPATH=-cp /usr/share/java/cup.jar:.
-# CUP=cup
-
 JFLEX=jflex
-CLASSPATH=-cp /Users/farid/Documents/java-cup-bin-11b/java-cup-11b.jar
-CUP=$(JAVA) $(CLASSPATH) java_cup.Main
+CLASSPATH=-cp /usr/share/java/cup.jar:.
+CUP=cup
 
 all: CM.class
 
