--- a/Checkpoint3/Makefile
+++ b/Checkpoint3/Makefile
@@ -2,14 +2,14 @@ JAVA=java
 JAVAC=javac
 
 # School Server Makefile Configurations
-# JFLEX=jflex
-# CLASSPATH=-cp /usr/share/java/cup.jar:.
-# CUP=cup
+ JFLEX=jflex
+ CLASSPATH=-cp /usr/share/java/cup.jar:.
+ CUP=cup
 
 # Farid's Makefile configurations
-JFLEX=jflex
-CLASSPATH=-cp /Users/farid/Documents/java-cup-bin-11b/java-cup-11b.jar:.
-CUP=$(JAVA) $(CLASSPATH) java_cup.Main
+#JFLEX=jflex
+#CLASSPATH=-cp /Users/farid/Documents/java-cup-bin-11b/java-cup-11b.jar:.
+#CUP=$(JAVA) $(CLASSPATH) java_cup.Main
 
 all: CM.class
 
